iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_test_oss1.local_35.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405d97d820ec0334bcdbbcd29a10",
    "scsi80": "SLIO-ORG ost9            d97d820e-c033-4bcd-bbcd-29a106cff7f9",
    "major": "65",
    "minor": "144",
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:8/block/sdz",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "5920670500733370910",
    "fs_label": "ost18",
    "paths": [
      "/dev/disk/by-id/scsi-36001405d97d820ec0334bcdbbcd29a10",
      "/dev/disk/by-id/wwn-0x6001405d97d820ec0334bcdbbcd29a10",
      "/dev/disk/by-path/fc---lun-8",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-8",
      "/dev/disk/by-label/ost18",
      "/dev/disk/by-uuid/5920670500733370910",
      "/dev/sdz"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-12",
          "serial": "36001405d97d820ec0334bcdbbcd29a10",
          "scsi80": "SLIO-ORG ost9            d97d820e-c033-4bcd-bbcd-29a106cff7f9",
          "dm_name": "mpaths",
          "size": 5368709120,
          "major": "253",
          "minor": "12",
          "filesystem_type": "zfs_member",
          "fs_uuid": "5920670500733370910",
          "fs_label": "ost18",
          "paths": [
            "/dev/mapper/mpaths",
            "/dev/disk/by-id/dm-name-mpaths",
            "/dev/disk/by-id/dm-uuid-mpath-36001405d97d820ec0334bcdbbcd29a10",
            "/dev/disk/by-label/ost18",
            "/dev/disk/by-uuid/5920670500733370910",
            "/dev/dm-12"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 5920670500733370910,
                "name": "ost18",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 13327356471988572184,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpaths",
                          "dev_id": "dm-uuid-mpath-36001405d97d820ec0334bcdbbcd29a10",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 3007659792893968209,
                      "name": "ost18/ost18",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost18/ost18"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587638748"
                        },
                        {
                          "name": "used",
                          "value": "3637760"
                        },
                        {
                          "name": "available",
                          "value": "5164673536"
                        },
                        {
                          "name": "referenced",
                          "value": "3637760"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost18/ost18"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "12"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "3007659792893968209"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3637760"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3637760"
                        },
                        {
                          "name": "logicalused",
                          "value": "1845248"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1845248"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.21@tcp"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:index",
                          "value": "18"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST0012"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "ost18",
                  "target": "/ost18",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
